updating app.js

--- a/Belly_Button_Biodiversity/index.html
+++ b/Belly_Button_Biodiversity/index.html
@@ -24,10 +24,7 @@
 
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)">
-            <option value = "value1">Value1</option>
-            <option value = 'value2'>Value2</option>          
-          </select>
+          <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         
         <div class="panel panel-primary">
